# LuaSTG-Evo

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  Readme.md
.github/workflows/: cmake-multi-platform.yml
LuaSTG/: CMakeLists.txt  Core.cmake  Platform.cmake  write-version.lua
LuaSTG/Configurer/: SharedHeaders.h
LuaSTG/Core/: ApplicationModel.hpp  ApplicationModel_SDL.cpp  ApplicationModel_SDL.hpp  DataObject.cpp  FileManager.cpp  InitializeConfigure.cpp  Type.hpp  framework.hpp  i18n.cpp
LuaSTG/Core/Audio/: Decoder.hpp  Decoder_ALL.cpp  Decoder_FLAC.cpp  Decoder_WAV.cpp  Decoder_ma.cpp  Decoder_ma.hpp  Device.hpp  Device_SDL.cpp  Device_SDL.hpp
LuaSTG/Core/Graphics/: DearImGui_SDL_OpenGL.cpp  DearImGui_SDL_OpenGL.hpp  Device.hpp  Device_OpenGL.cpp  Device_OpenGL.hpp  Font.hpp  Font_OpenGL.cpp  Font_OpenGL.hpp  Model_OpenGL.cpp  Model_OpenGL.hpp  Model_Shader_OpenGL.cpp  Renderer.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  Renderer_Shader_OpenGL.cpp  Sprite.hpp  Sprite_OpenGL.cpp  Sprite_OpenGL.hpp  SwapChain.hpp  SwapChain_OpenGL.cpp  SwapChain_OpenGL.hpp  Window.hpp  Window_SDL.cpp  Window_SDL.hpp
LuaSTG/LuaSTG/: AppFrame.cpp  AppFrame.h  AppFrameDisplayMode.cpp  AppFrameFileEx.cpp  AppFrameFontRenderer.cpp  AppFrameInput.cpp  AppFrameLua.cpp  AppFrameRender.cpp  AppFrameRenderEx.cpp  LConfig.h  LMathConstant.hpp  LuaSTG.manifest  Main.cpp  RuntimeCheck.cpp  SharedHeaders.h
LuaSTG/LuaSTG/Custom/: AppFrameLuaEx.cpp  Config.h  Custom.cmake  LuaSTG.icns  MacOSXBundleInfo.plist.in  app.icns  resource.aps  resource.rc
LuaSTG/LuaSTG/Debugger/: ImGuiExtension.cpp  ImGuiExtension.h  Logger.cpp
LuaSTG/LuaSTG/GameObject/: GameObject.cpp  GameObject.hpp  GameObjectBentLaser.cpp  GameObjectBentLaser.hpp  GameObjectPool.cpp  GameObjectPool.h
LuaSTG/LuaSTG/GameResource/: ResourceBase.hpp  ResourceManager.h  ResourceMusic.hpp  ResourcePool.cpp  ResourceSprite.hpp  ResourceTexture.hpp
LuaSTG/LuaSTG/GameResource/Implement/: ResourceFontImpl.cpp  ResourceMusicImpl.cpp  ResourceMusicImpl.hpp  ResourceParticleImpl.cpp  ResourceParticleImpl.hpp  ResourceSpriteImpl.cpp  ResourceSpriteImpl.hpp  ResourceTextureImpl.cpp  ResourceTextureImpl.hpp
LuaSTG/LuaSTG/LuaBinding/: LB_Mesh.cpp  LW_Archive.cpp  LW_Audio.cpp  LW_BentLaser.cpp  LW_Color.cpp  LW_FileManager.cpp  LW_GameObjectManager.cpp  LW_Input.cpp  LW_LuaSTG.cpp  LW_Platform.cpp  LW_Randomizer.cpp  LW_Render.cpp  LW_Renderer.cpp  LW_ResourceMgr.cpp  LW_StopWatch.cpp  LW_Type.cpp  LW_Window.cpp  LuaWrapper.cpp  LuaWrapper.hpp  LuaWrapperMisc.hpp  lua_luastg_hash.cpp  lua_luastg_hash.hpp  lua_particle.cpp  lua_particle.hpp  lua_particle_hash.cpp  lua_particle_hash.hpp  lua_random.cpp
LuaSTG/LuaSTG/Particle/: Particle2D.cpp  Particle2D.h  Particle3D.cpp  Particle3D.h  ParticleList.h  TexParticle2D.cpp  TexParticle2D.h  TexParticle3D.cpp  TexParticle3D.h
LuaSTG/LuaSTG/Utility/: ScopeObject.cpp  Utility.h  xorshift.hpp
LuaSTG/Platform/: AdapterPolicy.cpp  AdapterPolicy.hpp  All.cpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Keyboard.cpp  Keyboard.hpp  KnownDirectory.cpp  KnownDirectory.hpp  MessageBox.cpp  MessageBox.hpp  Shared.hpp
cmake/: MacOSXBundleInfo.plist.in  TargetCommonOptions.cmake  loader.cpm.cmake  packages.cpm.cmake  packages.lua.cmake  packages.z.cmake
data/example/: .gitignore
data/example/src/: main.lua
data/license/dr_libs/: LICENSE
data/test/: .gitignore
data/test/res/: cave.glb
data/test/src/: main.lua  test_model.lua  test_particle2d.lua  test_particle2d_apply.lua  test_particle2d_object.lua  test_particle2d_remove.lua  test_particle3d.lua  test_render3d.lua  test_rendertarget.lua  test_texparticle2d.lua  test_textinput.lua  test_textrenderer.lua  test_texture.lua  test_ttf.lua
imgui/: CMakeLists.txt
imgui/binding/src/: lua_imgui_ImGui_register.inl
scripts/: lua_luastg_hash.cpp  lua_luastg_hash.hpp  lua_particle_hash.cpp  lua_particle_hash.hpp  luastg_find_table.lua  particle_find_table.lua
utility/: CMakeLists.txt
